# ternary_bravo

./: README.md  pyproject.toml
src/ternary_bravo/: infer.py  model.py  setup_script.py  train.py
